fix: expose github pages flag to client

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ BASE_PATH=""
 # Public base path used in the browser. Mirror BASE_PATH when GitHub Pages is enabled.
 NEXT_PUBLIC_BASE_PATH=""
 
+# Mirror GITHUB_PAGES on the client bundle so static exports can disable server-only features.
+NEXT_PUBLIC_GITHUB_PAGES="false"
+
 # Feature toggles surfaced to the client bundle. Set to "true"/"false" to override defaults.
 NEXT_PUBLIC_ENABLE_METRICS="auto"
 NEXT_PUBLIC_FEATURE_SVG_NUMERIC_FILTERS="true"
