--- a/.github/actions/setup-node-project/action.yml
+++ b/.github/actions/setup-node-project/action.yml
@@ -58,7 +58,8 @@ runs:
       uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
       with:
         fetch-depth: "${{ inputs['checkout-fetch-depth'] }}"
-        ref: "${{ inputs['checkout-ref'] != '' && inputs['checkout-ref'] || github.ref }}"
+        repository: "${{ github.event.pull_request.head.repo.full_name || github.repository }}"
+        ref: "${{ inputs['checkout-ref'] != '' && inputs['checkout-ref'] || github.event.pull_request.head.sha || github.sha }}"
 
     - name: Detect package manager
       id: detect
