--- a/.github/workflows/regen-bot.yml
+++ b/.github/workflows/regen-bot.yml
@@ -91,6 +91,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
         with:
+          repository: ${{ github.event.workflow_run.head_repository.full_name || github.repository }}
           ref: ${{ needs.evaluate.outputs.head_sha }}
           fetch-depth: 0
 
