--- a/.github/workflows/workflow-lint.yml
+++ b/.github/workflows/workflow-lint.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
         with:
+          repository: ${{ github.event.pull_request.head.repo.full_name || github.repository }}
           fetch-depth: 2
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
