fix: align card hairline usage and palette tests

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "commit": "pnpm exec cz"
   },
   "dependencies": {
+    "@asamuzakjp/css-color": "^4.0.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@sentry/nextjs": "^8.35.0",
     "clsx": "^2.1.1",
